About: fix collapsing avatars (#12249)

--- a/_inc/client/components/about-page/style.scss
+++ b/_inc/client/components/about-page/style.scss
@@ -109,6 +109,7 @@ $color__back-link: #6c7781;
 			max-width: 80px;
 			vertical-align: top;
 			width: 100%;
+			height: 100%;
 		}
 	}
 }
